updat login form

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JrCoding</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-md navbar-light bg-primary mb-3 sticky-top shadow-lg ">
             <div class="container-fluid d-flex justify-content-between align-items-center">
                 <a class="navbar-brand text-white" href="#">
-                    <img src="../assets/img/a-modern-logo-design-for-a-coding-educat_bJ6bYG6kSGirTlHY-vSCBA_whnI_tjoSeSVBCZo1uudvA.jpeg"
+                    <img src="assets/img/a-modern-logo-design-for-a-coding-educat_bJ6bYG6kSGirTlHY-vSCBA_whnI_tjoSeSVBCZo1uudvA.jpeg"
                         alt="" width="40" height="34" class="d-inline-block align-text-top">
                     JrCoding
                 </a>
@@ -91,7 +91,7 @@
     </div>
 
 
-    <script src="../assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
