--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                     </button>
 
                 </form>
+                <p><b>Demo:user@gmail.com</b> PW:user123
+                <b>admin@gmail.com</b> PW:admin123</p>
             </div>
         </div>
         <!-- Footer -->
