--- a/admin/laporanProgress.html
+++ b/admin/laporanProgress.html
@@ -207,9 +207,9 @@
 
     </div>
 
-
+    <br><br>
     <!-- Footer -->
-    <footer class="container-fluid bg-footer px-4 py-3">
+    <footer class="container-fluid bg-footer px-4 py-3 mt-4">
         <div class="d-flex justify-content-between align-items-center" style="flex-wrap: nowrap;">
             <div class="d-flex align-items-center flex-shrink-0 footer-left">
                 <h4 class="mb-0 me-2">JrCoding</h4>
