update boostrap picture

--- a/user/proyek.html
+++ b/user/proyek.html
@@ -239,7 +239,7 @@
                 <div class="card h-100 shadow-sm border-0 hover-shadow">
                     <div class="row g-0 align-items-center">
                         <div class="col-md-4">
-                            <img src="https://ncarb.github.io/bootstrap/assets/img/bootstrap-stack.png"
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSweFYSGs5msi-oMwKtBTePLiOM_jR6J5B3sw&s"
                                 class="img-fluid rounded-start h-100 object-fit-cover" alt="Bootstrap">
                         </div>
                         <div class="col-md-8">
